--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,41 +1,21 @@
-div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+<main class="form-signin text-center">
+  <form id="login-form">
+    <h1 class="h3 mb-3 fw-normal">Login</h1>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
+    <div class="form-floating mb-3">
+      <input type="text" class="form-control" id="username-login" placeholder="Doe246" autofocus="true">
+      <label for="username-login">Username</label>
+    </div>
+    
+    <div class="form-floating mb-3">
+      <input type="password" class="form-control" id="password-login" placeholder="Password" autofocus="true">
+      <label for="password-login">Password</label>
+    </div>
 
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
-</div>
-<script src="./js/login.js"></script>
+    <button class="w-100 btn btn-lg btn-info mb-3" type="submit">Sign in</button>
+    <a class="login-link" href="/signup">Sign up instead</a>
+  </form>
+</main>
+
+{{!-- Load the login script --}}
+<script src="/Public/js/login.js"></script>
