--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,9 +3,20 @@
     <h1 class="h3 mb-3 fw-normal">Sign up today!</h1>
 
     <div class="form-floating mb-3">
+      <input type="text" class="form-control" id="name-signup" placeholder="name..." autofocus="true">
+      <label for="email-signup">Name</label>
+    </div>
+
+    <div class="form-floating mb-3">
+      <input type="text" class="form-control" id="email-signup" placeholder="email..." autofocus="true">
+      <label for="email-signup">email...</label>
+    </div>
+
+    <div class="form-floating mb-3">
       <input type="text" class="form-control" id="username-signup" placeholder="Doe246" autofocus="true">
       <label for="username-signup">Username</label>
     </div>
+    
     <div class="form-floating mb-3">
       <input type="password" class="form-control" id="password-signup" placeholder="Password" autofocus="true">
       <label for="password-signup">Password</label>
@@ -16,4 +27,4 @@
   </form>
 </main>
 
-<script src="/Public/js/signup.js"></script>
+<script src="js/signup.js"></script>
