--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,4 +9,4 @@
 {{/if}}
 
 <button type="submit" class="btn"><a class="link" href="/dashboard/new">Add New Post</a></button>
-{{!-- <script src="Public/js/add-post.js"></script> --}}
+<script src="js/add-post.js"></script>
