--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -27,6 +27,6 @@
         <button type="button" class="delete-post-btn w-100 btn btn-lg btn-danger mb-3">Delete Post</button>
     </form>
 </div>
-<link rel="stylesheet" href="/Public/css/style.css">
-<script src="/Public/js/edit-post.js"></script>
-<script src="/Public/js/delete-post.js"></script>
+<link rel="stylesheet" href="/css/style.css">
+<script src="js/edit-post.js"></script>
+<script src="js/delete-post.js"></script>
