--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-<link rel="stylesheet" href="/Public/css/style.css">
+<link rel="stylesheet" href="css/style.css">
   <title>The Tech Blog</title>
 </head>
 
@@ -54,7 +54,7 @@
     crossorigin="anonymous"></script>
 
   {{#if loggedIn}}
-  <script src="/Public/js/login.js"></script>
+  <script src="js/logout.js"></script>
   {{/if}}
 </body>
 
