--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,23 @@
-<main class="form-signin text-center">
-  <form id="login-form">
-    <h1 class="h3 mb-3 fw-normal">Login</h1>
-
-    <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="username-login" placeholder="Doe246" autofocus="true">
-      <label for="username-login">Username</label>
+<div>
+<h2>login</h2>
+<form class="login-form">
+    <div>
+        <label for="user-name">Username:</label>
+        <input type="text" id="username-login" />
     </div>
+    <div>
+    <label for="password-login">password:</label>
+    <input type="password" id="password-login" />
+</div>
+    <button class="submit-btn" type="submit">login!</button>
     
-    <div class="form-floating mb-3">
-      <input type="password" class="form-control" id="password-login" placeholder="Password" autofocus="true">
-      <label for="password-login">Password</label>
-    </div>
+    
+</form>
+<a href="/signup">Sign up Instead</a>
 
-    <button class="w-100 btn btn-lg btn-info mb-3" type="submit">Sign in</button>
-    <a class="login-link" href="/signup">Sign up instead</a>
-  </form>
-</main>
+
+
+</div>
 
 {{!-- Load the login script --}}
-<script src="/Public/js/login.js"></script>
+<script src="js/login.js"></script>
