after functional login & signup

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <div>
 <h2>login</h2>
-<form class="login-form">
+<form id="login-form">
     <div>
-        <label for="user-name">Username:</label>
+        <label for="user-name">email:</label>
         <input type="text" id="username-login" />
     </div>
     <div>
