--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,7 +44,7 @@
     </nav>
 
     <main class="container">
-      <h1 class="display-2 py-5">The Tech Blog</h1>
+      <h1 class="display-2 py-5">Tech Blog</h1>
       {{{ body }}}
     </main>
 
