--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -8,7 +8,7 @@
                 {{comment_text}}
             </div>
             <div class="meta">
-                -{{user.username}}, {{format_date created_at}}
+                {{user.username}}, {{format_date created_at}}
             </div>
         </section>
     </div>
