--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,8 +2,8 @@
 <h2>login</h2>
 <form id="login-form">
     <div>
-        <label for="user-name">email:</label>
-        <input type="text" id="username-login" />
+        <label for="email">email:</label>
+        <input type="text" id="email-login" />
     </div>
     <div>
     <label for="password-login">password:</label>
