more code brush

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
     <input type="password" id="password-login" />
 </div>
     <button class="submit-btn" type="submit">login!</button>
-    
+    <a class="login-success" href="/dashboard"></a>
     
 </form>
 <a href="/signup">Sign up Instead</a>
