--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -18,4 +18,4 @@
     </form>
 </main>
 <link rel="stylesheet" href="/css/style.css">
-<script src="js/add-post.js"></script>
+<script src="./js/add-post.js"></script>
