--- a/views/single.comment.handlebars
+++ b/views/single.comment.handlebars
@@ -16,5 +16,5 @@
 {{> comment post.comments}}
 
 {{#if loggedIn}}
-<script src="js/comment.js"></script>
+<script src="./js/comment.js"></script>
 {{/if}}
