edited handlebars and fixed post issue

--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -17,5 +17,5 @@
     </form>
 </div>
 <link rel="stylesheet" href="/css/style.css">
-<script src="./js/edit-post.js"></script>
-<script src="./js/delete-post.js"></script>
+<script src="/js/edit-post.js"></script>
+<script src="/js/delete-post.js"></script>
