--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,7 +54,7 @@
     crossorigin="anonymous"></script>
 
   {{#if loggedIn}}
-  <script src="./js/logout.js"></script>
+  <script src="/js/logout.js"></script>
   {{/if}}
 </body>
 
