--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -17,5 +17,5 @@
     </form>
     </form>
 </main>
-<link rel="stylesheet" href="css/style.css">
-<script src="js/add-post.js"></script>
+<link rel="stylesheet" href="./css/style.css">
+<script src="./js/add-post.js"></script>
