--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -3,19 +3,14 @@
     <form class="card-body" id="add-post-form">
         <div class="form-floating mb-3">
             <label for="post-title" class="form-label" ></label>
-            {{!-- Name of Post, value used in JavaScript --}}
             <input type="text" id="post-title" name="post-title" class="form-input w-100" autofocus="true" placeholder="Title"/>
         </div>
-
         <div class="form-floating mb-3">
-            {{!-- Content of Post, value used in JavaScript --}}
             <label class="form-label" for="content" ></label>
             <textarea id="content" name="content" class="form-input w-100" aria-label="With textarea"
                 autofocus="true" placeholder="What's on your mind?"></textarea>
         </div>
         <button type="submit" class="w-100 btn btn-lg btn-info mb-3">Create</button>
     </form>
-    </form>
 </main>
-<link rel="stylesheet" href="./css/style.css">
-<script src="./js/add-post.js"></script>
+<script src="/js/add-post.js"></script>
