--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -9,7 +9,7 @@
 
         <div class="form-floating mb-3">
         <label class="form-label" for="content">Content</label>
-        <textarea name="content" type="text" placeholder="{{post.content}}" class="form-input w-100" style="height: 100px"/></textarea>
+        <textarea name="content" id= "content" type="text" placeholder="{{post.content}}" class="form-input w-100" style="height: 100px"/></textarea>
         </div>
 
         <button type="submit" class="w-100 btn btn-lg btn-info mb-3">Update Post</button>
