--- a/views/Single-post.handlebars
+++ b/views/Single-post.handlebars
@@ -8,7 +8,7 @@
         <label class="form-label">Comment</label>
         <input id="comment" name="comment-body" class="form-input" />
 
-        <button type="submit" class="btn">Submit</button>
+        <button type="submit" class="btn">Submit commet</button>
     </form>
 </div>
 {{/if}}
