--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,11 +31,11 @@
             </li>
             {{#if loggedIn}}
             <li class="nav-item">
-              <a class="nav-link" href="/login" id="logout">Logout</a>
+              <a class="nav-link" href="login" id="logout">Logout</a>
             </li>
             {{else}}
             <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
+              <a class="nav-link" href="/logout">Login</a>
             </li>
             {{/if}}
           </ul>
