--- a/views/Single-post.handlebars
+++ b/views/Single-post.handlebars
@@ -1,6 +1,6 @@
 {{> post-info post}}
 
-{{#if loggedIn}}
+{{!-- {{#if logged_in}} --}}
 <div class="card">
     <h3 class="card-header"></h3>
     <form class="card-body comment-form" id="comment-form">
@@ -8,13 +8,13 @@
         <label class="form-label">Comment</label>
         <input id="comment" name="comment-body" class="form-input" />
 
-        <button type="submit" class="btn">Submit commet</button>
+        <button type="submit" class="btn">Submit</button>
     </form>
 </div>
-{{/if}}
+{{!-- {{/if}} --}}
 
 {{> comment post.comments}}
+{{!-- {{#if logged_in}} --}}
 
-{{#if loggedIn}}
 <script src="/js/comment.js"></script>
-{{/if}}
+{{!-- {{/if}} --}}
